# voteaire-escrow-offchain

./: README.md  pyproject.toml
integration-test/: .env  run_tests.sh
integration-test/test/: base.py  test_plutus.py
integration-test/tmp_configs/local-vasil/: byron-genesis.json  config.json
keys/charlie/: payment.skey
scripts/: escrow.plutus  oracle.addr  oracle.plutus  script.plutus
secrets/: postgres-passwd
src/: .env  app.py  datum.py  sample.env  simulate.py
src/api/: openapi-spec.yml  oracles.py
src/lib/: cardano.py  data_types.py  environment.py  signature.py
src/model/: __init__.py  signature.py
tests/fixtures/: api.py
tests/unit/: test_cardano_tools.py  test_oracle_submit.py  test_signature.py
